--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -87,15 +87,48 @@
     "                                          \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
     "                                          \"Function\", \"Mapped Country\", \"MICA\"])\n",
     "\n",
+    "# Function to handle YTD data\n",
+    "def process_ytd_data(sheet, sheet_name, current_month, current_year, attribute_type):\n",
+    "    # Initialize an empty list to store YTD data\n",
+    "    ytd_data = []\n",
+    "    \n",
+    "    # Loop through each row in the sheet\n",
+    "    for index, row in sheet.iterrows():\n",
+    "        entity = row.get('Entity', '')\n",
+    "        function = row.get('RTN Level 4', '')\n",
+    "        mica = row.get('Account', '')\n",
+    "        \n",
+    "        # Calculate the sum for YTD by adding values from Jan to the current month\n",
+    "        total_ytd = 0\n",
+    "        for month in range(1, current_month + 1):\n",
+    "            month_col = f\"M{month:02d} {current_year}\"  # Format month column name\n",
+    "            if month_col in sheet.columns:\n",
+    "                total_ytd += row[month_col]\n",
+    "        \n",
+    "        # Collect data based on whether the sheet is DC or HC\n",
+    "        period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"  # Format period\n",
+    "        if 'DC' in sheet_name.upper():\n",
+    "            ytd_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, total_ytd, '', '', '', '', entity, function, '', mica])\n",
+    "        elif 'HC' in sheet_name.upper():\n",
+    "            ytd_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, '', total_ytd, '', '', '', entity, function, '', mica])\n",
+    "    \n",
+    "    return pd.DataFrame(ytd_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "                                            \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "                                            \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "                                            \"Function\", \"Mapped Country\", \"MICA\"])\n",
+    "\n",
     "# Main function to process the entire file and consolidate data\n",
     "def process_file(processed_file_path, current_month, current_year):\n",
     "    # Load the processed file\n",
     "    xls = pd.ExcelFile(processed_file_path)\n",
     "    \n",
-    "    # Initialize empty dataframes for MoM and FY data\n",
+    "    # Initialize empty dataframes for MoM, FY, and YTD data\n",
     "    df_mom = pd.DataFrame()\n",
     "    df_fy_target = pd.DataFrame()\n",
     "    df_fy_forecast = pd.DataFrame()\n",
+    "    df_ytd_target = pd.DataFrame()\n",
+    "    df_ytd_forecast = pd.DataFrame()\n",
+    "    df_ytd_actual = pd.DataFrame()\n",
     "    \n",
     "    # Loop through sheets and apply respective processing\n",
     "    for sheet_name in xls.sheet_names:\n",
@@ -104,17 +137,20 @@
     "        # Convert sheet name to lower case for case-insensitive matching\n",
     "        sheet_name_lower = sheet_name.lower()\n",
     "        \n",
-    "        if 'actual' in sheet_name_lower:  # Only process 'Actual' sheets for MoM\n",
+    "        if 'actual' in sheet_name_lower:  # Only process 'Actual' sheets for MoM and YTD Actual\n",
     "            df_mom = pd.concat([df_mom, process_mom_data(sheet, sheet_name, current_month, current_year)], ignore_index=True)\n",
+    "            df_ytd_actual = pd.concat([df_ytd_actual, process_ytd_data(sheet, sheet_name, current_month, current_year, 'YTD Actual')], ignore_index=True)\n",
     "        \n",
-    "        if 'target' in sheet_name_lower:  # Process 'Target' sheets for FY Target\n",
+    "        if 'target' in sheet_name_lower:  # Process 'Target' sheets for FY Target and YTD Target\n",
     "            df_fy_target = pd.concat([df_fy_target, process_fy_data(sheet, sheet_name, current_year, 'FY Target')], ignore_index=True)\n",
+    "            df_ytd_target = pd.concat([df_ytd_target, process_ytd_data(sheet, sheet_name, current_month, current_year, 'YTD Target')], ignore_index=True)\n",
     "        \n",
-    "        if 'fcst' in sheet_name_lower:  # Process 'Fcst' sheets for FY Forecast\n",
+    "        if 'fcst' in sheet_name_lower:  # Process 'Fcst' sheets for FY Forecast and YTD Forecast\n",
     "            df_fy_forecast = pd.concat([df_fy_forecast, process_fy_data(sheet, sheet_name, current_year, 'FY Forecast')], ignore_index=True)\n",
+    "            df_ytd_forecast = pd.concat([df_ytd_forecast, process_ytd_data(sheet, sheet_name, current_month, current_year, 'YTD Forecast')], ignore_index=True)\n",
     "    \n",
     "    # Concatenate all dataframes into a final dataframe\n",
-    "    final_df = pd.concat([df_mom, df_fy_target, df_fy_forecast], ignore_index=True)\n",
+    "    final_df = pd.concat([df_mom, df_fy_target, df_fy_forecast, df_ytd_target, df_ytd_forecast, df_ytd_actual], ignore_index=True)\n",
     "    \n",
     "    return final_df\n",
     "\n",
