--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
+    "from openpyxl import Workbook\n",
     "\n",
     "# Helper function to convert month numbers to names\n",
     "def month_number_to_name(month):\n",
@@ -23,147 +24,148 @@
     "        months.append((month, year))\n",
     "    return months\n",
     "\n",
-    "# Function to handle pasting data for MoM type\n",
+    "# Function to handle MoM data\n",
     "def process_mom_data(sheet, sheet_name, current_month, current_year):\n",
-    "    # Initialize an empty list to store MoM data\n",
-    "    mom_data = []\n",
-    "    \n",
-    "    # Get last three months\n",
     "    last_three_months = get_last_three_months(current_month, current_year)\n",
-    "    \n",
-    "    # Loop through each row in the sheet\n",
+    "    mom_data = []\n",
+    "\n",
     "    for index, row in sheet.iterrows():\n",
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
-    "        \n",
-    "        # Iterate over the last three months\n",
+    "\n",
     "        for month_num, year in last_three_months:\n",
-    "            month_col = f\"M{month_num:02d} {year}\"  # Note space between month and year\n",
-    "            \n",
-    "            # Check if this month column exists in the sheet\n",
+    "            month_col = f\"M{month_num:02d} {year}\"\n",
+    "\n",
     "            if month_col in sheet.columns:\n",
-    "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
-    "                \n",
-    "                # Collect data based on whether the sheet is DC or HC\n",
+    "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
     "                if 'DC' in sheet_name.upper():\n",
     "                    mom_data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
     "                elif 'HC' in sheet_name.upper():\n",
     "                    mom_data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
-    "    \n",
-    "    return pd.DataFrame(mom_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "                                           \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "                                           \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "                                           \"Function\", \"Mapped Country\", \"MICA\"])\n",
     "\n",
-    "# Function to handle FY data\n",
-    "def process_fy_data(sheet, sheet_name, current_year, attribute_type):\n",
-    "    # Initialize an empty list to store FY data\n",
-    "    fy_data = []\n",
-    "    \n",
-    "    # Determine FY column\n",
-    "    fy_col = f\"FY {current_year}\"\n",
-    "    \n",
-    "    # Check if the FY column exists in the sheet\n",
-    "    if fy_col not in sheet.columns:\n",
-    "        print(f\"{fy_col} not found in {sheet_name}, skipping this sheet.\")\n",
-    "        return pd.DataFrame()  # Return an empty dataframe if the column is not found\n",
-    "    \n",
-    "    # Loop through each row in the sheet\n",
-    "    for index, row in sheet.iterrows():\n",
-    "        entity = row.get('Entity', '')\n",
-    "        function = row.get('RTN Level 4', '')\n",
-    "        mica = row.get('Account', '')\n",
-    "        \n",
-    "        # Collect data based on whether the sheet is DC or HC\n",
-    "        period_value = f\"Dec-{str(current_year)[-2:]}\"  # Format period\n",
-    "        if 'DC' in sheet_name.upper():\n",
-    "            fy_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, row[fy_col], '', '', '', '', entity, function, '', mica])\n",
-    "        elif 'HC' in sheet_name.upper():\n",
-    "            fy_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, '', row[fy_col], '', '', '', entity, function, '', mica])\n",
-    "    \n",
-    "    return pd.DataFrame(fy_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "                                          \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "                                          \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "                                          \"Function\", \"Mapped Country\", \"MICA\"])\n",
+    "    return pd.DataFrame(mom_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "                                            \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "                                            \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "                                            \"Function\", \"Mapped Country\", \"MICA\"])\n",
     "\n",
     "# Function to handle YTD data\n",
-    "def process_ytd_data(sheet, sheet_name, current_month, current_year, attribute_type):\n",
-    "    # Initialize an empty list to store YTD data\n",
+    "def process_ytd_data(sheet, sheet_name, current_month, current_year):\n",
     "    ytd_data = []\n",
-    "    \n",
-    "    # Loop through each row in the sheet\n",
+    "\n",
     "    for index, row in sheet.iterrows():\n",
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
     "        \n",
-    "        # Calculate the sum for YTD by adding values from Jan to the current month\n",
-    "        total_ytd = 0\n",
-    "        for month in range(1, current_month + 1):\n",
-    "            month_col = f\"M{month:02d} {current_year}\"  # Format month column name\n",
-    "            if month_col in sheet.columns:\n",
-    "                total_ytd += row[month_col]\n",
-    "        \n",
-    "        # Collect data based on whether the sheet is DC or HC\n",
-    "        period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"  # Format period\n",
+    "        total_ytd = sum(row[f\"M{month:02d} {current_year}\"] for month in range(1, current_month + 1) if f\"M{month:02d} {current_year}\" in sheet.columns)\n",
+    "\n",
+    "        period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
     "        if 'DC' in sheet_name.upper():\n",
-    "            ytd_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, total_ytd, '', '', '', '', entity, function, '', mica])\n",
+    "            ytd_data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, total_ytd, '', '', '', '', entity, function, '', mica])\n",
     "        elif 'HC' in sheet_name.upper():\n",
-    "            ytd_data.append([sheet_name, '', '', '', '', '', attribute_type, period_value, '', total_ytd, '', '', '', entity, function, '', mica])\n",
-    "    \n",
+    "            ytd_data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, '', total_ytd, '', '', '', entity, function, '', mica])\n",
+    "\n",
     "    return pd.DataFrame(ytd_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
     "                                            \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
     "                                            \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
     "                                            \"Function\", \"Mapped Country\", \"MICA\"])\n",
     "\n",
-    "# Main function to process the entire file and consolidate data\n",
-    "def process_file(processed_file_path, current_month, current_year):\n",
+    "# Function to handle Prior Year FY data\n",
+    "def process_prior_year_fy_data(sheet, sheet_name, current_year):\n",
+    "    prior_year_fy_data = []\n",
+    "    prior_year_fy_col = f\"FY {current_year - 1}\"\n",
+    "\n",
+    "    if prior_year_fy_col not in sheet.columns:\n",
+    "        return pd.DataFrame()\n",
+    "\n",
+    "    for index, row in sheet.iterrows():\n",
+    "        entity = row.get('Entity', '')\n",
+    "        function = row.get('RTN Level 4', '')\n",
+    "        mica = row.get('Account', '')\n",
+    "        \n",
+    "        period_value = f\"Dec-{str(current_year - 1)[-2:]}\"\n",
+    "        if 'DC' in sheet_name.upper():\n",
+    "            prior_year_fy_data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, row[prior_year_fy_col], '', '', '', '', entity, function, '', mica])\n",
+    "        elif 'HC' in sheet_name.upper():\n",
+    "            prior_year_fy_data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, '', row[prior_year_fy_col], '', '', '', entity, function, '', mica])\n",
+    "\n",
+    "    return pd.DataFrame(prior_year_fy_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "                                                     \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "                                                     \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "                                                     \"Function\", \"Mapped Country\", \"MICA\"])\n",
+    "\n",
+    "# Function to handle Prior Year YTD data\n",
+    "def process_prior_year_ytd_data(sheet, sheet_name, current_month, current_year):\n",
+    "    prior_year_ytd_data = []\n",
+    "\n",
+    "    for index, row in sheet.iterrows():\n",
+    "        entity = row.get('Entity', '')\n",
+    "        function = row.get('RTN Level 4', '')\n",
+    "        mica = row.get('Account', '')\n",
+    "\n",
+    "        total_prior_year_ytd = sum(row[f\"YTD{month:02d} {current_year - 1}\"] for month in range(1, current_month + 1) if f\"YTD{month:02d} {current_year - 1}\" in sheet.columns)\n",
+    "\n",
+    "        period_value = f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\"\n",
+    "        if 'DC' in sheet_name.upper():\n",
+    "            prior_year_ytd_data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, total_prior_year_ytd, '', '', '', '', entity, function, '', mica])\n",
+    "        elif 'HC' in sheet_name.upper():\n",
+    "            prior_year_ytd_data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, '', total_prior_year_ytd, '', '', '', entity, function, '', mica])\n",
+    "\n",
+    "    return pd.DataFrame(prior_year_ytd_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "                                                     \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "                                                     \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "                                                     \"Function\", \"Mapped Country\", \"MICA\"])\n",
+    "\n",
+    "# Main function to process the workbook\n",
+    "def process_workbook(processed_file_path, current_month, current_year):\n",
     "    # Load the processed file\n",
     "    xls = pd.ExcelFile(processed_file_path)\n",
-    "    \n",
-    "    # Initialize empty dataframes for MoM, FY, and YTD data\n",
-    "    df_mom = pd.DataFrame()\n",
-    "    df_fy_target = pd.DataFrame()\n",
-    "    df_fy_forecast = pd.DataFrame()\n",
-    "    df_ytd_target = pd.DataFrame()\n",
-    "    df_ytd_forecast = pd.DataFrame()\n",
-    "    df_ytd_actual = pd.DataFrame()\n",
-    "    \n",
-    "    # Loop through sheets and apply respective processing\n",
+    "\n",
+    "    # Create a new workbook and the \"Paste\" sheet\n",
+    "    wb = Workbook()\n",
+    "    ws = wb.active\n",
+    "    ws.title = \"Paste\"\n",
+    "\n",
+    "    # Define headers\n",
+    "    headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "               \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "               \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "               \"Function\", \"Mapped Country\", \"MICA\"]\n",
+    "    ws.append(headers)\n",
+    "\n",
+    "    final_df = pd.DataFrame()  # Initialize the final DataFrame\n",
+    "\n",
+    "    # Process each sheet for different attribute types\n",
     "    for sheet_name in xls.sheet_names:\n",
     "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "        \n",
-    "        # Convert sheet name to lower case for case-insensitive matching\n",
-    "        sheet_name_lower = sheet_name.lower()\n",
-    "        \n",
-    "        if 'actual' in sheet_name_lower:  # Only process 'Actual' sheets for MoM and YTD Actual\n",
-    "            df_mom = pd.concat([df_mom, process_mom_data(sheet, sheet_name, current_month, current_year)], ignore_index=True)\n",
-    "            df_ytd_actual = pd.concat([df_ytd_actual, process_ytd_data(sheet, sheet_name, current_month, current_year, 'YTD Actual')], ignore_index=True)\n",
-    "        \n",
-    "        if 'target' in sheet_name_lower:  # Process 'Target' sheets for FY Target and YTD Target\n",
-    "            df_fy_target = pd.concat([df_fy_target, process_fy_data(sheet, sheet_name, current_year, 'FY Target')], ignore_index=True)\n",
-    "            df_ytd_target = pd.concat([df_ytd_target, process_ytd_data(sheet, sheet_name, current_month, current_year, 'YTD Target')], ignore_index=True)\n",
-    "        \n",
-    "        if 'fcst' in sheet_name_lower:  # Process 'Fcst' sheets for FY Forecast and YTD Forecast\n",
-    "            df_fy_forecast = pd.concat([df_fy_forecast, process_fy_data(sheet, sheet_name, current_year, 'FY Forecast')], ignore_index=True)\n",
-    "            df_ytd_forecast = pd.concat([df_ytd_forecast, process_ytd_data(sheet, sheet_name, current_month, current_year, 'YTD Forecast')], ignore_index=True)\n",
-    "    \n",
-    "    # Concatenate all dataframes into a final dataframe\n",
-    "    final_df = pd.concat([df_mom, df_fy_target, df_fy_forecast, df_ytd_target, df_ytd_forecast, df_ytd_actual], ignore_index=True)\n",
-    "    \n",
-    "    return final_df\n",
+    "        # Process MoM\n",
+    "        if 'ACTUAL' in sheet_name.upper():\n",
+    "            final_df = pd.concat([final_df, process_mom_data(sheet, sheet_name, current_month, current_year)])\n",
+    "\n",
+    "        # Process YTD\n",
+    "        if 'ACTUAL' in sheet_name.upper():\n",
+    "            final_df = pd.concat([final_df, process_ytd_data(sheet, sheet_name, current_month, current_year)])\n",
+    "\n",
+    "        # Process Prior Year FY\n",
+    "        if 'DC' in sheet_name.upper() or 'HC' in sheet_name.upper():\n",
+    "            final_df = pd.concat([final_df, process_prior_year_fy_data(sheet, sheet_name, current_year)])\n",
+    "            final_df = pd.concat([final_df, process_prior_year_ytd_data(sheet, sheet_name, current_month, current_year)])\n",
+    "\n",
+    "    # Write the final DataFrame to the Paste sheet\n",
+    "    for row in final_df.itertuples(index=False):\n",
+    "        ws.append(row)\n",
+    "\n",
+    "    # Save the final workbook\n",
+    "    wb.save('final_output_file.xlsx')  # Temporarily saving as xlsx\n",
     "\n",
     "# Example usage\n",
     "current_month = 1  # For January\n",
     "current_year = 2025\n",
     "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
     "\n",
-    "# Process the file and return the final dataframe\n",
-    "final_df = process_file(processed_file_path, current_month, current_year)\n",
-    "\n",
-    "# Save the final dataframe to a file\n",
-    "final_df.to_excel('final_output_file.xlsx', index=False)  # Save as xlsx\n"
+    "process_workbook(processed_file_path, current_month, current_year)\n"
    ]
   },
   {
