--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -56,14 +56,16 @@
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
-    "        \n",
+    "\n",
+    "        # Calculate YTD\n",
     "        total_ytd = sum(row[f\"M{month:02d} {current_year}\"] for month in range(1, current_month + 1) if f\"M{month:02d} {current_year}\" in sheet.columns)\n",
     "\n",
-    "        period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "        if 'DC' in sheet_name.upper():\n",
-    "            ytd_data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, total_ytd, '', '', '', '', entity, function, '', mica])\n",
-    "        elif 'HC' in sheet_name.upper():\n",
-    "            ytd_data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, '', total_ytd, '', '', '', entity, function, '', mica])\n",
+    "        if total_ytd:\n",
+    "            period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
+    "            if 'DC' in sheet_name.upper():\n",
+    "                ytd_data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, total_ytd, '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet_name.upper():\n",
+    "                ytd_data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, '', total_ytd, '', '', '', entity, function, '', mica])\n",
     "\n",
     "    return pd.DataFrame(ytd_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
     "                                            \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
@@ -82,12 +84,13 @@
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
-    "        \n",
-    "        period_value = f\"Dec-{str(current_year - 1)[-2:]}\"\n",
-    "        if 'DC' in sheet_name.upper():\n",
-    "            prior_year_fy_data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, row[prior_year_fy_col], '', '', '', '', entity, function, '', mica])\n",
-    "        elif 'HC' in sheet_name.upper():\n",
-    "            prior_year_fy_data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, '', row[prior_year_fy_col], '', '', '', entity, function, '', mica])\n",
+    "\n",
+    "        if not pd.isna(row[prior_year_fy_col]):  # Ensure the value is not NaN\n",
+    "            period_value = f\"Dec-{str(current_year - 1)[-2:]}\"\n",
+    "            if 'DC' in sheet_name.upper():\n",
+    "                prior_year_fy_data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, row[prior_year_fy_col], '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet_name.upper():\n",
+    "                prior_year_fy_data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, '', row[prior_year_fy_col], '', '', '', entity, function, '', mica])\n",
     "\n",
     "    return pd.DataFrame(prior_year_fy_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
     "                                                     \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
@@ -103,13 +106,15 @@
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
     "\n",
+    "        # Calculate Prior Year YTD\n",
     "        total_prior_year_ytd = sum(row[f\"YTD{month:02d} {current_year - 1}\"] for month in range(1, current_month + 1) if f\"YTD{month:02d} {current_year - 1}\" in sheet.columns)\n",
     "\n",
-    "        period_value = f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\"\n",
-    "        if 'DC' in sheet_name.upper():\n",
-    "            prior_year_ytd_data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, total_prior_year_ytd, '', '', '', '', entity, function, '', mica])\n",
-    "        elif 'HC' in sheet_name.upper():\n",
-    "            prior_year_ytd_data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, '', total_prior_year_ytd, '', '', '', entity, function, '', mica])\n",
+    "        if total_prior_year_ytd:  # Check if total is not 0 or NaN\n",
+    "            period_value = f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\"\n",
+    "            if 'DC' in sheet_name.upper():\n",
+    "                prior_year_ytd_data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, total_prior_year_ytd, '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet_name.upper():\n",
+    "                prior_year_ytd_data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, '', total_prior_year_ytd, '', '', '', entity, function, '', mica])\n",
     "\n",
     "    return pd.DataFrame(prior_year_ytd_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
     "                                                     \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
@@ -138,7 +143,7 @@
     "    # Process each sheet for different attribute types\n",
     "    for sheet_name in xls.sheet_names:\n",
     "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "        \n",
+    "\n",
     "        # Process MoM\n",
     "        if 'ACTUAL' in sheet_name.upper():\n",
     "            final_df = pd.concat([final_df, process_mom_data(sheet, sheet_name, current_month, current_year)])\n",
@@ -158,6 +163,10 @@
     "\n",
     "    # Save the final workbook\n",
     "    wb.save('final_output_file.xlsx')  # Temporarily saving as xlsx\n",
+    "\n",
+    "# Example usage\n",
+    "current_month = 1  # For January\n",
+    "\n",
     "\n",
     "# Example usage\n",
     "current_month = 1  # For January\n",
