--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -14,7 +14,7 @@
     "def month_number_to_name(month):\n",
     "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
-    "# Helper function to determine the last three months\n",
+    "# Helper function to get the last three months\n",
     "def get_last_three_months(current_month, current_year):\n",
     "    months = []\n",
     "    for i in range(3):\n",
@@ -23,7 +23,7 @@
     "        months.append((month, year))\n",
     "    return months\n",
     "\n",
-    "# Function to handle MoM data\n",
+    "# Function to process MoM data\n",
     "def process_mom_data(sheet, sheet_name, current_month, current_year):\n",
     "    last_three_months = get_last_three_months(current_month, current_year)\n",
     "    mom_data = []\n",
@@ -35,7 +35,6 @@
     "\n",
     "        for month_num, year in last_three_months:\n",
     "            month_col = f\"M{month_num:02d} {year}\"\n",
-    "\n",
     "            if month_col in sheet.columns:\n",
     "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
     "                if 'DC' in sheet_name.upper():\n",
@@ -43,12 +42,9 @@
     "                elif 'HC' in sheet_name.upper():\n",
     "                    mom_data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
     "\n",
-    "    return pd.DataFrame(mom_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "                                            \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "                                            \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "                                            \"Function\", \"Mapped Country\", \"MICA\"])\n",
+    "    return pd.DataFrame(mom_data)\n",
     "\n",
-    "# Function to handle YTD data\n",
+    "# Function to process YTD data\n",
     "def process_ytd_data(sheet, sheet_name, current_month, current_year):\n",
     "    ytd_data = []\n",
     "\n",
@@ -57,7 +53,6 @@
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
     "\n",
-    "        # Calculate YTD\n",
     "        total_ytd = sum(row[f\"M{month:02d} {current_year}\"] for month in range(1, current_month + 1) if f\"M{month:02d} {current_year}\" in sheet.columns)\n",
     "\n",
     "        if total_ytd:\n",
@@ -67,12 +62,9 @@
     "            elif 'HC' in sheet_name.upper():\n",
     "                ytd_data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, '', total_ytd, '', '', '', entity, function, '', mica])\n",
     "\n",
-    "    return pd.DataFrame(ytd_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "                                            \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "                                            \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "                                            \"Function\", \"Mapped Country\", \"MICA\"])\n",
+    "    return pd.DataFrame(ytd_data)\n",
     "\n",
-    "# Function to handle Prior Year FY data\n",
+    "# Function to process Prior Year FY data\n",
     "def process_prior_year_fy_data(sheet, sheet_name, current_year):\n",
     "    prior_year_fy_data = []\n",
     "    prior_year_fy_col = f\"FY {current_year - 1}\"\n",
@@ -85,19 +77,16 @@
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
     "\n",
-    "        if not pd.isna(row[prior_year_fy_col]):  # Ensure the value is not NaN\n",
+    "        if not pd.isna(row[prior_year_fy_col]):\n",
     "            period_value = f\"Dec-{str(current_year - 1)[-2:]}\"\n",
     "            if 'DC' in sheet_name.upper():\n",
     "                prior_year_fy_data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, row[prior_year_fy_col], '', '', '', '', entity, function, '', mica])\n",
     "            elif 'HC' in sheet_name.upper():\n",
     "                prior_year_fy_data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, '', row[prior_year_fy_col], '', '', '', entity, function, '', mica])\n",
     "\n",
-    "    return pd.DataFrame(prior_year_fy_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "                                                     \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "                                                     \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "                                                     \"Function\", \"Mapped Country\", \"MICA\"])\n",
+    "    return pd.DataFrame(prior_year_fy_data)\n",
     "\n",
-    "# Function to handle Prior Year YTD data\n",
+    "# Function to process Prior Year YTD data\n",
     "def process_prior_year_ytd_data(sheet, sheet_name, current_month, current_year):\n",
     "    prior_year_ytd_data = []\n",
     "\n",
@@ -106,24 +95,19 @@
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
     "\n",
-    "        # Calculate Prior Year YTD\n",
     "        total_prior_year_ytd = sum(row[f\"YTD{month:02d} {current_year - 1}\"] for month in range(1, current_month + 1) if f\"YTD{month:02d} {current_year - 1}\" in sheet.columns)\n",
     "\n",
-    "        if total_prior_year_ytd:  # Check if total is not 0 or NaN\n",
+    "        if total_prior_year_ytd:\n",
     "            period_value = f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\"\n",
     "            if 'DC' in sheet_name.upper():\n",
     "                prior_year_ytd_data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, total_prior_year_ytd, '', '', '', '', entity, function, '', mica])\n",
     "            elif 'HC' in sheet_name.upper():\n",
     "                prior_year_ytd_data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, '', total_prior_year_ytd, '', '', '', entity, function, '', mica])\n",
     "\n",
-    "    return pd.DataFrame(prior_year_ytd_data, columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "                                                     \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "                                                     \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "                                                     \"Function\", \"Mapped Country\", \"MICA\"])\n",
+    "    return pd.DataFrame(prior_year_ytd_data)\n",
     "\n",
     "# Main function to process the workbook\n",
     "def process_workbook(processed_file_path, current_month, current_year):\n",
-    "    # Load the processed file\n",
     "    xls = pd.ExcelFile(processed_file_path)\n",
     "\n",
     "    # Create a new workbook and the \"Paste\" sheet\n",
@@ -131,42 +115,30 @@
     "    ws = wb.active\n",
     "    ws.title = \"Paste\"\n",
     "\n",
-    "    # Define headers\n",
     "    headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
     "               \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
     "               \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
     "               \"Function\", \"Mapped Country\", \"MICA\"]\n",
     "    ws.append(headers)\n",
     "\n",
-    "    final_df = pd.DataFrame()  # Initialize the final DataFrame\n",
+    "    final_df = pd.DataFrame()\n",
     "\n",
-    "    # Process each sheet for different attribute types\n",
     "    for sheet_name in xls.sheet_names:\n",
     "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "\n",
-    "        # Process MoM\n",
+    "        # Check for relevant data and append\n",
     "        if 'ACTUAL' in sheet_name.upper():\n",
     "            final_df = pd.concat([final_df, process_mom_data(sheet, sheet_name, current_month, current_year)])\n",
-    "\n",
-    "        # Process YTD\n",
-    "        if 'ACTUAL' in sheet_name.upper():\n",
     "            final_df = pd.concat([final_df, process_ytd_data(sheet, sheet_name, current_month, current_year)])\n",
     "\n",
-    "        # Process Prior Year FY\n",
     "        if 'DC' in sheet_name.upper() or 'HC' in sheet_name.upper():\n",
     "            final_df = pd.concat([final_df, process_prior_year_fy_data(sheet, sheet_name, current_year)])\n",
     "            final_df = pd.concat([final_df, process_prior_year_ytd_data(sheet, sheet_name, current_month, current_year)])\n",
     "\n",
-    "    # Write the final DataFrame to the Paste sheet\n",
     "    for row in final_df.itertuples(index=False):\n",
     "        ws.append(row)\n",
     "\n",
-    "    # Save the final workbook\n",
-    "    wb.save('final_output_file.xlsx')  # Temporarily saving as xlsx\n",
-    "\n",
-    "# Example usage\n",
-    "current_month = 1  # For January\n",
-    "\n",
+    "    wb.save('final_output_file.xlsx')\n",
     "\n",
     "# Example usage\n",
     "current_month = 1  # For January\n",
